rest controller files (no code), sec config for api, api spec update, removal of semi colons
