# src/main/kotlin/com/example/SportsBookingSystem/Rest/Controller/PlayerRestController.kt
@@ -1,0 +1,25 @@
+package com.example.SportsBookingSystem.Rest.Controller
+
+import com.example.SportsBookingSystem.Entity.PlayerEntity
+import com.example.SportsBookingSystem.Service.PlayerService
+import org.springframework.web.bind.annotation.GetMapping
+import org.springframework.web.bind.annotation.PostMapping
+import org.springframework.web.bind.annotation.RequestMapping
+import org.springframework.web.bind.annotation.RestController
+
+@RestController
+@RequestMapping("/api/player")
+class PlayerRestController(private val playerService: PlayerService) {
+    @GetMapping("/findAll")
+    fun findAll(): List<PlayerEntity>
+    {
+        if(playerService.findAll().isEmpty())
+        {
+            throw NoSuchElementException("There is no players registered")
+        }
+        return playerService.findAll()
+    }
+
+
+
+}
